# api-wilayah

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
data/: 1_provinsi.csv  2_kabupaten_kota.csv  3_kecamatan.csv
src/: data.rs  handlers.rs  main.rs  models.rs
