[package]
name = "api-wilayah"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-wilayah"
path = "src/main.rs"

[dependencies]
ntex = { version = "3.9.6", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
